# computer-systems-architecture

./: README.md  Task1.rtf  task2.rtf
#1 A statically typed computing system architecture focused on a procedural approach/program/: Container.cpp  Functional.h  ObjectOriented.h  Procedural.cpp  Procedural.h  ProgrammingLanguage.cpp
#2 Statically typed architecture of a computing system oriented to an object-oriented approach/program/: CMakeLists.txt  Container.cpp  Container.h  Functional.cpp  Functional.h  ObjectOriented.cpp  ObjectOriented.h  Procedural.cpp  Procedural.h  ProgrammingLanguage.cpp  ProgrammingLanguage.h  Random.h  main.cpp
#3 Architecture of a computer system with dynamic typing/: task3.rtf
#3 Architecture of a computer system with dynamic typing/program/: Container.py  Functional.py  ObjectOriented.py  Procedural.py
#4 Architecture of the computing system of the system level (set) of commands/program/: inrnd.c  main.c  perimeter.asm
#5 Architecture of the computing system. Multithreading/: task5.rtf  ~$task5.rtf  ~WRL0782.tmp
#5 Architecture of the computing system. Multithreading/program/: CMakeLists.txt  Student.cpp  Student.h  Teacher.cpp  Teacher.h  Thread.cpp  Thread.h  main.cpp
program/: CMakeLists.txt  Container.cpp  Container.h  Extender.py  Functional.cpp  Functional.h  ObjectOriented.cpp  ObjectOriented.h  Procedural.cpp  Procedural.h  ProgrammingLanguage.cpp  ProgrammingLanguage.h  Random.cpp  Random.h  data.h  extdata.h  input.c  main.cpp  main.py  makefile  output.c
tests/input/: test1.txt  test2.txt  test3.txt  test4.txt  (+1 more)
(+49 files in other folders)
